--- a/DEV.html
+++ b/DEV.html
@@ -207,8 +207,8 @@
         }
 
         #contat {
-            background-image: url(TheWhat.jpeg);
-            display: none;
+         /*   background-image: url(TheWhat.jpeg);
+         */   display: none;    
         }
 
         #exit {
@@ -285,7 +285,7 @@
         }
         .devs{
             height:1000px;
-            width: 300px;
+            width: 500px;
         }
     </style>
 </head>
@@ -388,8 +388,47 @@
                     </div>
                 </div>
                 <div class="subs" id="contat">
-                    <div class="devs" id="Nanda">
-                        <h1>NANDAKISHORE T J</h1>
+                    <div style="display: flex;">
+                        <div class="devs" style="padding: 10px;" id="Nanda">
+                            <h2 style="color: white; width: 300px;">NANDAKISHORE T J</h2><br><br>
+                            <p1 style="color: white;">Email: nanda@gmail.com<br>
+                                Phone : 2165495375<br><br>
+                                Lorem ipsum dolor sit amet, consectetur 
+                                adipiscing elit, sed do eiusmod tempor 
+                                incididunt ut labore et dolore magna 
+                                aliqua. Ut enim ad minim veniam, quis 
+                                nostrud exercitation ullamco laboris 
+                                nisi ut aliquip ex ea commodo consequat. 
+                                Duis aute irure dolor in reprehenderit 
+                                in voluptate velit esse cillum dolore 
+                                eu fugiat nulla pariatur.</p1>
+                        </div>
+                        <div class="devs" style="padding: 10px;" id="Tom">
+                            <h2 style="color: white; width: 300px;">TOM RAJEEV</h2><br><br>
+                            <p1 style="color: white;">Email: tommy@gmail.com<br>
+                                Phone : 2165495375<br><br>Lorem ipsum dolor sit amet, consectetur 
+                                adipiscing elit, sed do eiusmod tempor 
+                                incididunt ut labore et dolore magna 
+                                aliqua. Ut enim ad minim veniam, quis 
+                                nostrud exercitation ullamco laboris 
+                                nisi ut aliquip ex ea commodo consequat. 
+                                Duis aute irure dolor in reprehenderit 
+                                in voluptate velit esse cillum dolore 
+                                eu fugiat nulla pariatur. </p1>
+                        </div>
+                        <div class="devs" style="padding: 10px;" id="Shank">
+                            <h2 style="color: white; width: 300px;">SHANKER MENON</h2><br><br>
+                            <p1 style="color: white;">Email: shankie@gmail.com<br>
+                                Phone : 2165495375<br><br>Lorem ipsum dolor sit amet, consectetur 
+                                adipiscing elit, sed do eiusmod tempor 
+                                incididunt ut labore et dolore magna 
+                                aliqua. Ut enim ad minim veniam, quis 
+                                nostrud exercitation ullamco laboris 
+                                nisi ut aliquip ex ea commodo consequat. 
+                                Duis aute irure dolor in reprehenderit 
+                                in voluptate velit esse cillum dolore 
+                                eu fugiat nulla pariatur.</p1>
+                        </div>
                     </div>
                 </div>
                 <a href="add.html" ><span class="material-symbols-outlined" id="add"><img class="icon" src="add.png"> </span></a>
